feat(lesson): add minimal view for sentences
- Added toggle for minimal/detailed view
- Hide translation in minimal view
- Show inactive state on sentence

--- a/admin-web/src/i18n/en.json
+++ b/admin-web/src/i18n/en.json
@@ -289,7 +289,9 @@
     "editDescription": "Edit sentences text. Actions are UI only for now.",
     "editModeButton": "Edit mode",
     "viewModeButton": "View mode",
-    "noSentences": "No sentences available for this lesson."
+    "noSentences": "No sentences available for this lesson.",
+    "detailedViewButton": "Detailed view",
+    "minimalViewButton": "Minimal view"
   },
   "lessonSettings": {
     "title": "Lesson settings",
